          the configure flag --with-intsize=64. Doing so has a number of
          consequences on Ipopt interfaces and Ipopt dependencies. See
          the Ipopt installation instructions for more details. [#259]
        - Fixed DenseVector::SumLogsImpl() such that it returns 0.0 for
          a vector of dimension 0. Returned nan for homogeneous 0-vector
          of dimension 0 before.

2021-0x-yy: 3.13.5
        - Allow to use --without-pardiso to disable check for MKL Pardiso [#454]
          (note: name of this option will change to --disable-pardisomkl
          with Ipopt 3.14)

2021-02-24: 3.13.4
        - Fixed a linking issue for ipopt_sens [#418]
        - Fixed Makefile for Java example regarding location of jar file
        - Fixed build of R interface if using -fvisibility=hidden.

2020-10-16: 3.13.3
        - Members of AmplTNLP class are now protected instead of private.
        - Updated Eclipse Public License from 1.0 to 2.0.
        - Fixed dangling pointer problems with Journalist used for debugging
          (--with-ipopt-verbosity > 0) when more than one IpoptApplication
          is used. [#393, thanks to Brad Bell]
        - Fixed build problem when using HSL library that does not include
          MA27, MA57, or MC19. [#395]
        - Added example recursive_nlp that uses Ipopt to solves an
          optimization problem for the evaluation of the objective function.
          [contributed by Brad Bell]
        - Fixed build of linear-solver loader on Windows [#408]

2020-04-30: 3.13.2
        - The C-preprocessor defines COIN_IPOPT_CHECKLEVEL,
          COIN_IPOPT_VERBOSITY, and FORTRAN_INTEGER_TYPE, which are defined
          by IpoptConfig.h, have been renamed to IPOPT_CHECKLEVEL,
          IPOPT_VERBOSITY, and IPOPT_FORTRAN_INTEGER_TYPE, respectively.
          They are still available under their previous name, but these
          will be removed in Ipopt 3.14.